name:                bug
version:             0
maintainer:          hvr@gnu.org
build-type:          Simple
cabal-version:       >=2

library bug-lib
  default-language:    Haskell2010

  build-depends:       base        ^>= 4.9
                     , Cabal
                     , aeson       ^>= 1
                     , async       ^>= 2.1.0
                     , bytestring  ^>= 0.10.2
                     , containers  ^>= 0.5.7.1
                     , deepseq     ^>= 1.4
                     , directory   ^>= 1.3.0
                     , filepath    ^>= 1.4.1.0
                     , hashable    ^>= 1.2.4
                     , http-types  ^>= 0.9.1
                     , io-streams  ^>= 1.3.5
                     , lens        ^>= 4.14
                     , mtl         ^>= 2.2.1
                     , process     ^>= 1.4
                     , servant     ^>= 0.8
                     , stm         ^>= 2.4.4
                     , tar         ^>= 0.5
                     , text        ^>= 1.2
                     , time        ^>= 1.6

                     , servant-client ^>= 0.8.1
                     , http-client ^>= 0.5.3

                     , postgresql-simple ^>= 0.5.2
                     , uuid-types        ^>= 1.0.3
                     , cryptohash-sha256 ^>= 0.11.100.1

executable bug-main0
  default-language:    Haskell2010
  hs-source-dirs:      src-exe
  main-is:             MainWorker.hs

  build-depends:       bug-lib
  build-depends:       servant-snap

  -- non-locals
  build-depends:       base        ^>= 4.9
                     , Cabal 
                     , aeson       ^>= 1
                     , async       ^>= 2.1.0
                     , bytestring  ^>= 0.10.2
                     , containers  ^>= 0.5.7.1
                     , deepseq     ^>= 1.4
                     , directory   ^>= 1.3.0
                     , filepath    ^>= 1.4.1.0
                     , http-types  ^>= 0.9.1
                     , io-streams  ^>= 1.3.5
                     , lens        ^>= 4.14
                     , mtl         ^>= 2.2.1
                     , process     ^>= 1.4
                     , servant     ^>= 0.8
                     , snap        ^>= 1
                     , snap-core   ^>= 1
                     , snap-server ^>= 1
                     , stm         ^>= 2.4.4
                     , tar         ^>= 0.5
                     , text        ^>= 1.2
                     , time        ^>= 1.6
                     , config-value ^>= 0.5
                     , concurrent-extra ^>= 0.7.0.10
                     , unix        ^>= 2.7.2


executable bug-main1
  default-language:    Haskell2010
  main-is:             Main.hs

  build-depends: bug-lib
  build-depends:       servant-client
                     , http-client

  -- non-locals
  build-depends:       base        ^>= 4.9
                     , Cabal    
                     , aeson       ^>= 1
                     , async       ^>= 2.1.0
                     , bytestring  ^>= 0.10.2
                     , containers  ^>= 0.5.7.1
                     , deepseq     ^>= 1.4
                     , directory   ^>= 1.3.0
                     , filepath    ^>= 1.4.1.0
                     , http-types  ^>= 0.9.1
                     , io-streams  ^>= 1.3.5
                     , lens        ^>= 4.14
                     , mtl         ^>= 2.2.1
                     , process     ^>= 1.4
                     , servant     ^>= 0.8
                     , servant-docs^>= 0.8
                     , stm         ^>= 2.4.4
                     , tar         ^>= 0.5
                     , text        ^>= 1.2
                     , time        ^>= 1.6


executable bug-main2
  default-language:    Haskell2010
  main-is:             Main.hs

  build-depends: bug-lib

  build-depends:       servant-snap
  build-depends:       servant-client, http-client, uuid-types, groom

  build-depends:       base                 ^>= 4.9
                     , Cabal 
                     , aeson                ^>= 1
                     , async                ^>= 2.1.0
                     , bytestring           ^>= 0.10.2
                     , containers           ^>= 0.5.7.1
                     , deepseq              ^>= 1.4
                     , directory            ^>= 1.3.0
                     , filepath             ^>= 1.4.1.0
                     , http-types           ^>= 0.9.1
                     , io-streams           ^>= 1.3.5
                     , lens                 ^>= 4.14
                     , mtl                  ^>= 2.2.1
                     , process              ^>= 1.4
                     , servant              ^>= 0.8
                     , snap                 ^>= 1
                     , snap-core            ^>= 1
                     , snap-server          ^>= 1
                     , stm                  ^>= 2.4.4
                     , tar                  ^>= 0.5
                     , text                 ^>= 1.2
                     , time                 ^>= 1.6
--                     , opaleye              ^>= 0.5.1
                     , product-profunctors  ^>= 0.7.1
                     , postgresql-simple    ^>= 0.5.2
                     , unordered-containers ^>= 0.2.7.1
                     , resource-pool        ^>= 0.2.3.2
                     , SafeSemaphore        ^>= 0.10.1

