name:          Cabal
version:       1.25.0.0
copyright:     2003-2016, Cabal Development Team (see AUTHORS file)
license:       BSD3
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      A framework for packaging Haskell software
description:
  The Haskell Common Architecture for Building Applications and
  Libraries: a framework defining a common interface for authors to more
  easily build their Haskell applications in a portable way.
  .
  The Haskell Cabal is part of a larger infrastructure for distributing,
  organizing, and cataloging Haskell libraries and tools.
category:       Distribution
cabal-version:  >=1.10
build-type:     Simple

flag bundled-binary-generic
  default: False

flag old-directory
  description:  Use directory < 1.2 and old-time
  default:      False

flag parsec
  description:  Use parsec parser
  default:      False
  manual:       True

flag parsec-struct-diff
  description:  Use StructDiff in parsec tests. Affects only parsec tests.
  default:      False
  manual:       True

library
  build-depends:
    array      >= 0.1 && < 0.6,
    base       >= 4.5 && < 5,
    bytestring >= 0.9 && < 1,
    containers >= 0.4 && < 0.6,
    deepseq    >= 1.3 && < 1.5,
    filepath   >= 1.3 && < 1.5,
    pretty     >= 1.1 && < 1.2,
    process    >= 1.1.0.1 && < 1.5,
    time       >= 1.4 && < 1.7

  if flag(old-directory)
    build-depends: directory >= 1.1 && < 1.2, old-time >= 1 && < 1.2,
                   process   >= 1.0.1.1  && < 1.1.0.2
  else
    build-depends: directory >= 1.2 && < 1.4,
                   process   >= 1.1.0.2  && < 1.5

  if flag(bundled-binary-generic)
    build-depends: binary >= 0.5 && < 0.7
  else
    build-depends: binary >= 0.7 && < 0.9

  -- Needed for GHC.Generics before GHC 7.6
  if impl(ghc < 7.6)
    build-depends: ghc-prim >= 0.2 && < 0.3

  if !os(windows)
    build-depends:
      unix >= 2.5 && < 2.8

  if os(windows)
    build-depends:
      Win32 >= 2.2 && < 2.4

  if flag(parsec)
    build-depends:
      transformers,
      parsec >= 3.1.9 && <3.2
    build-tools:
      alex >=3.1.4 && <3.3

  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    KindSignatures
    NondecreasingIndentation
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    Trustworthy
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if impl(ghc >= 7.11)
    other-extensions: PatternSynonyms


